# fastapi_graphql

./: README.md  docker-compose.yaml  main.py  pyproject.toml
src/: config.py  database.py
src/estates/: models.py  resolver.py  services.py
src/graphql_api/: __init__.py
