[tool.poetry]
name = "fastapi-graphql"
version = "0.1.0"
description = ""
authors = ["ivansantiagojr <ivansantiago.junior@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
dataclasses-json = "^0.5.7"
gql = "^3.4.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.151.0"}
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
motor = "^3.1.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
